--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/base.css">
+			<link rel="stylesheet" type="text/css" href="../css/base.css">
 		</head>
 		<body>
 			<nav>
